--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&family=Roboto+Mono:wght@500&family=VT323&display=swap"
     rel="stylesheet">
 
-  <title>Akbar LinkTree</title> 
+  <title>LinkTree - Akbar Gyaranto</title> 
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="error image" class="animate__animated
+      <img src="profile.jpg" alt="error image" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead" style="font-family: VT323"></p>
     </div>
@@ -29,7 +29,7 @@
 
     <!-- link tree button -->
     <div class="link">
-      <a href="https://instagram.com/gyaranto" target="_blank" class="animate__animated animate__bounceInLeft">Instagram
+      <a href="https://instagram.com/akbargyaranto" target="_blank" class="animate__animated animate__bounceInLeft">Instagram
         <svg style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1"
           viewBox="0 0 512 512" width="20" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
           xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
