--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="profile.jpg" alt="error image" class="animate__animated
+      <img src="profile.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead" style="font-family: VT323"></p>
     </div>
@@ -49,7 +49,7 @@
       </a>
 
 
-      <a href="https://github.com/AkbarGyaranto" target="_blank" class="animate__animated
+      <a href="https://github.com/" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-2s ">GitHub
         <svg role="img" width="20" class="fill-current " viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>GitHub</title>
@@ -83,7 +83,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
   <script>
-    gsap.to('.lead', { duration: 4, delay: 1.5, text: 'Akbar Gyaranto Saputra' })
+    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'Akbar Gyaranto Saputra' })
   </script>
 
 
