--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
 
   <title>LinkTree - Akbar Gyaranto</title>
+  
 </head>
 
 <body>
@@ -24,6 +25,12 @@
       <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead" style="font-family: VT323"></p>
+      
+      <div class="audio">
+        <audio controls>
+            <source src="danzakuduro.mp3">
+        </audio>
+    </div>
     </div>
 
 
