--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
 
   <title>LinkTree - Akbar Gyaranto</title>
-  
+
 </head>
 
 <body>
@@ -25,12 +25,6 @@
       <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead" style="font-family: VT323"></p>
-      
-      <div class="audio">
-        <audio controls>
-            <source src="danzakuduro.mp3">
-        </audio>
-    </div>
     </div>
 
 
@@ -57,18 +51,10 @@
       </a>
 
 
-      <a href="https://github.com/" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-2s ">GitHub
-        <svg role="img" width="20" class="fill-current " viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <title>GitHub</title>
-          <path
-            d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
-        </svg>
-      </a>
 
 
       <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-3s">Spotify
+        class="animate__animated animate__bounceInLeft animate__delay-2s">Spotify
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Spotify</title>
           <path
@@ -76,12 +62,12 @@
         </svg>
       </a>
 
-      <a href="https://akbargyaranto.github.io/portofoliotailwind/" target="_blank" 
-      class="animate__animated animate__bounceInLeft animate__delay-4s">Portofolio
+      <a href="https://twitter.com/Bbei0813?t=GNqfiv2jU9iPYkva4moemA&s=09" target="_blank"
+        class="animate__animated animate__bounceInLeft animate__delay-3s">
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <title>4chan</title>
+          <title>Undertale</title>
           <path
-            d="M11.07 8.82S9.803 1.079 5.145 1.097C2.006 1.109.78 4.124 3.055 4.802c0 0-2.698.973-2.698 2.697 0 1.725 4.274 3.54 10.713 1.32zm1.931 5.924s.904 7.791 5.558 7.991c3.136.135 4.503-2.82 2.262-3.604 0 0 2.74-.845 2.82-2.567.08-1.723-4.105-3.737-10.64-1.82zm-3.672-1.55s-7.532 2.19-6.952 6.813c.39 3.114 3.53 3.969 3.93 1.63 0 0 1.29 2.559 3.002 2.351 1.712-.208 3-4.67.02-10.794zm5.623-2.467s7.727-1.35 7.66-6.008c-.046-3.138-3.074-4.333-3.728-2.051 0 0-1-2.686-2.726-2.668-1.724.018-3.494 4.312-1.206 10.727z" />
+            d="M3 0v1.5H1.5V3H0v12h3v3h3v3h3v3h6v-3h3v-3h3v-3h3V3h-1.5V1.5H21V0h-3v1.5h-3V3h-1.5v3h-3V3H9V1.5H6V0z" />
         </svg>
       </a>
 
@@ -92,7 +78,7 @@
     <!-- footer -->
     <div class="footer animate__animated animate__bounceInUp
         animate__delay-5s">
-      <i>made with love 💕</i>
+      <i></i>
     </div>
   </div>
 
