--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </svg>
       </a>
 
-      <a href="https://twitter.com/Bbei0813?t=GNqfiv2jU9iPYkva4moemA&s=09" target="_blank"
+      <a href="https://www.douyin.com/user/MS4wLjABAAAAdcNDTERxoghOHAjMNRA4o28dlHWqtr-9UCLLhtrvees" target="_blank"
         class="animate__animated animate__bounceInLeft animate__delay-3s">
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Undertale</title>
