--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
 
   <title>LinkTree - Akbar Gyaranto</title>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
 </head>
 
