--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="bg6.jpg" alt="Punya Saya" class="animate__animated
+      <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Web Developer | Graphic Design</p>
     </div>
-   
+
 
     <!-- link tree button -->
     <div class="link">
@@ -53,10 +53,18 @@
       </a>
 
 
+      <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
+        class="animate__animated animate__bounceInLeft animate__delay-2s">Twitter
+        <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <title>Twitter</title>
+          <path
+            d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
+        </svg>
+      </a>
 
 
       <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-2s">Spotify
+        class="animate__animated animate__bounceInLeft animate__delay-3s">Spotify
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Spotify</title>
           <path
@@ -65,7 +73,7 @@
       </a>
 
       <a href="https://www.douyin.com/user/MS4wLjABAAAAdcNDTERxoghOHAjMNRA4o28dlHWqtr-9UCLLhtrvees" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-3s">
+        class="animate__animated animate__bounceInLeft animate__delay-4s">
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Undertale</title>
           <path
