--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </a>
 
 
-      <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
+      <a href="https://twitter.com/gyaranto09" target="_blank"
         class="animate__animated animate__bounceInLeft animate__delay-2s">Twitter
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Twitter</title>
