--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
 
   <title>LinkTree - Akbar Gyaranto</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+ 
 
 </head>
 
@@ -24,9 +24,9 @@
     <!-- profile picture -->
     <div class="profile">
       <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
-          animate__pulse animate__infinite rounded" />
+          animate__pulse animate__infinite rounded" />8
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
-      <p class="title">Web Developer | Graphic Design</p>
+      <p class="title">Web Developer | Graphic Designer</p>
     </div>
 
 
