--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&family=Roboto+Mono:wght@500&family=VT323&display=swap"
     rel="stylesheet">
 
+    
+
   <title>LinkTree - Akbar Gyaranto</title>
  
 
@@ -24,7 +26,7 @@
     <!-- profile picture -->
     <div class="profile">
       <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
-          animate__pulse animate__infinite rounded" />8
+          animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Web Developer | Graphic Designer</p>
     </div>
