--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </a>
 
 
-      <a href="http://tiktok.com/@devgyaranto" target="_blank" class="animate__animated
+      <a href="https://notfound404.vercel.app/" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-1s">TikTok
         <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>TikTok</title>
@@ -55,7 +55,7 @@
       </a>
 
 
-      <a href="https://twitter.com/gyaranto09" target="_blank"
+      <a href="https://notfound404.vercel.app/" target="_blank"
         class="animate__animated animate__bounceInLeft animate__delay-2s">Twitter
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Twitter</title>
