--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="https://i.ibb.co/bFwpm7s/pinterestdownloader-com-1685770908-511794.gif" alt="Punya Saya" class="animate__animated
+      <img src="src/img/pp.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Web Developer | Graphic Designer</p>
