--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
   <script>
-    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'Akbar Gyaranto Saputra' })
+    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: '@akbargyaranto' })
   </script>
 
 
