--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
     gsap.to('.lead', { duration: 1.5, delay: 1.5, text: '@akbargyaranto' })
   </script>
 
-
+<script>
+  alert('Selamat datang di halaman web saya!')
+</script>
 </body>
 
 </html>
