--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="/src/gif/pp.gif" alt="Punya Saya" class="animate__animated
+      <img src="/src/img/b781efd1f0a763c444eab631494ef813.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
-      <p class="title">Web Developer | Graphic Designer</p>
+      <p class="title">Enjoy Your Life</p>
     </div>
 
 
@@ -57,7 +57,10 @@
 
       <a href="https://www.threads.net/@akbargyaranto" target="_blank"
         class="animate__animated animate__bounceInLeft animate__delay-2s">Threads
+        <img src="src/img/OIF-removebg-preview.png" width="20" alt="">
       </a>
+
+      
 
 
       <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
@@ -67,6 +70,11 @@
           <path
             d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z" />
         </svg>
+      </a>
+
+      <a href="https://digitalxceltech.vercel.app/" target="_blank"
+        class="animate__animated animate__bounceInLeft animate__delay-4s">Company
+        
       </a>
     </div>
 
@@ -82,12 +90,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
   <script>
-    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: '@akbargyaranto' })
+    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'akbargyaranto' })
   </script>
 
-<script>
+<!-- <script>
   alert('Selamat datang di halaman web saya!')
-</script>
+</script> -->
 </body>
 
 </html>
