--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
+      <audio controls>
+        <source src="videoplayback.mp3" type="audio/mpeg">
+        <!-- Teks alternatif untuk browser yang tidak mendukung audio -->
+        Maaf, browser Anda tidak mendukung pemutar audio.
+    </audio>
     </div>
 
+    
 
     <!-- link tree button -->
     <div class="link">
