--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="/src/img/b781efd1f0a763c444eab631494ef813.jpg" alt="Punya Saya" class="animate__animated
+      <img src="/src/img/heart.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
