--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&family=Roboto+Mono:wght@500&family=VT323&display=swap"
     rel="stylesheet">
@@ -25,12 +26,12 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="/src/img/heart.jpg" alt="Punya Saya" class="animate__animated
+      <img src="/src/img/b781efd1f0a763c444eab631494ef813.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
       <audio controls>
-        <source src="videoplayback.mp3" type="audio/mpeg">
+        <source src="rindu semalam.mp3" type="audio/mpeg">
         <!-- Teks alternatif untuk browser yang tidak mendukung audio -->
         Maaf, browser Anda tidak mendukung pemutar audio.
     </audio>
@@ -78,9 +79,9 @@
         </svg>
       </a>
 
-      <a href="https://digitalxceltech.vercel.app/" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-4s">Company
-        
+      <a href="https://xiechuling.vercel.app/" target="_blank"
+        class="animate__animated animate__bounceInLeft animate__delay-4s">
+        <i class="fa-solid fa-crown fa-xs"></i>
       </a>
     </div>
 
@@ -94,6 +95,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
+ 
 
   <script>
     gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'akbargyaranto' })
