--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
         </svg>
       </a>
 
-      <a href="https://xiechuling.vercel.app/" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-4s">
-        <i class="fa-solid fa-crown fa-xs"></i>
+      <a href="https://digitalxceltech.vercel.app/" target="_blank"
+        class="animate__animated animate__bounceInLeft animate__delay-4s">Company
       </a>
     </div>
 
