--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-  <title>LinkTree - Akbar Gyaranto</title>
+  <title>Akbar Gyaranto ^_^</title>
 
 
 </head>
@@ -31,7 +31,7 @@
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
       <audio controls>
-        <source src="videoplayback.mp3" type="audio/mpeg">
+        <source src="Akon- Right Now (slowed reverb).mp3" type="audio/mpeg">
         <!-- Teks alternatif untuk browser yang tidak mendukung audio -->
         Maaf, browser Anda tidak mendukung pemutar audio.
     </audio>
