--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="/src/img/IMG_20230823_210125_314.webp" alt="Punya Saya" class="animate__animated
+      <img src="/src/img/WhatsApp Image 2023-08-16 at 21.50.16.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
