--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="/src/img/93b2b99e06f58d2ec3c69ef4f9cdf90b.jpg" alt="Punya Saya" class="animate__animated
+      <img src="src/img/pp.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
