--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="src/img/WhatsApp Image 2023-08-16 at 21.50.16.jpg" alt="Punya Saya" class="animate__animated
+      <img src="src/img/pp.jpg" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
@@ -52,18 +52,11 @@
       </a>
 
 
-      <a href="https://notfound404.vercel.app/" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-1s">TikTok
-        <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <title>TikTok</title>
-          <path
-            d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z" />
-        </svg>
-      </a>
+
 
 
       <a href="https://www.threads.net/@akbargyaranto" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-2s">Threads
+        class="animate__animated animate__bounceInLeft animate__delay-1s">Threads
         <img src="src/img/OIF-removebg-preview.png" width="20" alt="">
       </a>
 
@@ -71,12 +64,16 @@
 
 
       <a href="https://open.spotify.com/playlist/5ZNEQgFYyoHqQhEl9P2I6x?si=c477e87e5f044518" target="_blank"
-        class="animate__animated animate__bounceInLeft animate__delay-3s">Spotify
+        class="animate__animated animate__bounceInLeft animate__delay-2s">Spotify
         <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>Spotify</title>
           <path
             d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z" />
         </svg>
+      </a>
+
+      <a href="https://gyaranto.vercel.app/" target="_blank" class="animate__animated
+          animate__bounceInLeft animate__delay-3s">Portofolio
       </a>
 
       <!-- <a href="https://www.douyin.com/user/MS4wLjABAAAAdcNDTERxoghOHAjMNRA4o28dlHWqtr-9UCLLhtrvees" target="_blank"
@@ -89,23 +86,23 @@
       </a>
     </div> -->
 
-    <!-- footer -->
-    <div class="footer animate__animated animate__bounceInUp
+      <!-- footer -->
+      <div class="footer animate__animated animate__bounceInUp
         animate__delay-5s">
-      <i></i>
+        <i></i>
+      </div>
     </div>
-  </div>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
 
-  <script>
-    gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
-  </script>
+    <script>
+      gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
+    </script>
 
-  <!-- <script>
+    <!-- <script>
   alert('Selamat datang di halaman web saya!')
 </script> -->
 </body>
