--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     </div> -->
 
       <!-- footer -->
-      <div class="footer animate__animated animate__bounceInUp
-        animate__delay-5s">
-        <i></i>
+      <div class="footer animate__animated animate__bounceInLeft
+        animate__delay-4s">
+        <i>Created By AkbarGyaranto</i>
       </div>
     </div>
 
