--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <!-- footer -->
       <div class="footer animate__animated animate__bounceInLeft
         animate__delay-4s">
-        <i>Created By AkbarGyaranto</i>
+        <i>Created By akbargyaranto</i>
       </div>
     </div>
 
