--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container animate__animated animate__zoomIn">
     <!-- profile picture -->
     <div class="profile">
-      <img src="src/img/pp.jpg" alt="Punya Saya" class="animate__animated
+      <img src="src/gif/0548dd4afa665874c0c568fe5c189bda.gif" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title">Enjoy Your Life</p>
