--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="src/gif/0548dd4afa665874c0c568fe5c189bda.gif" alt="Punya Saya" class="animate__animated
           animate__pulse animate__infinite rounded" />
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
-      <p class="title">Enjoy Your Life</p>
+      <p class="title quote"></p>
       <audio controls>
         <source src="Canon Rock_l1dPqxiB8aI.mp3" type="audio/mpeg">
         <!-- Teks alternatif untuk browser yang tidak mendukung audio -->
@@ -100,6 +100,7 @@
 
     <script>
       gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
+      gsap.to('.quote', { duration: 5.5, delay: 2.7, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199)' })
     </script>
 
     <!-- <script>
