--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <script>
       gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
-      gsap.to('.quote', { duration: 5.5, delay: 2.7, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199)' })
+      gsap.to('.quote', { duration: 10, delay: 2.7, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199).' })
     </script>
 
     <!-- <script>
