--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+  
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&family=Roboto+Mono:wght@500&family=VT323&display=swap"
     rel="stylesheet">
@@ -73,7 +75,7 @@
       </a>
 
       <a href="https://gyaranto.vercel.app/" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-3s">Portofolio
+          animate__bounceInLeft animate__delay-3s">Portfolio
       </a>
 
       <!-- <a href="https://www.douyin.com/user/MS4wLjABAAAAdcNDTERxoghOHAjMNRA4o28dlHWqtr-9UCLLhtrvees" target="_blank"
@@ -87,8 +89,8 @@
     </div> -->
 
       <!-- footer -->
-      <div class="footer animate__animated animate__lightSpeedInLeft
-        animate__delay-5s">
+      <div class="footer animate__animated animate__fadeInLeft animate-duration: 5s 
+      animate__delay-5s">
         <i>Created By akbargyaranto</i>
       </div>
     </div>
@@ -97,11 +99,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
-
+<!-- gsap -->
     <script>
       gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
-      gsap.to('.quote', { duration: 7, delay: 2.7, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199).' })
+      gsap.to('.quote', { duration: 4, delay: 2.5, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199).' })
     </script>
+
+      <!-- aos 
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+          AOS.init();
+      </script> -->
 
     <!-- <script>
   alert('Selamat datang di halaman web saya!')
