--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title quote"></p>
       <audio controls>
-        <source src="Canon Rock_l1dPqxiB8aI.mp3" type="audio/mpeg">
+        <source src="You-Are-My-Light378.mp3" type="audio/mpeg">
         <!-- Teks alternatif untuk browser yang tidak mendukung audio -->
         Maaf, browser Anda tidak mendukung pemutar audio.
       </audio>
