--- a/index.html
+++ b/index.html
@@ -11,16 +11,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
-  
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&family=Roboto+Mono:wght@500&family=VT323&display=swap"
     rel="stylesheet">
-
-
-
   <title>stillness ^_^</title>
-
-
 </head>
 
 <body>
@@ -29,7 +23,7 @@
     <!-- profile picture -->
     <div class="profile">
       <img src="supernyanballoon.webp" alt="Punya Saya" class="animate__animated
-          animate__pulse animate__infinite rounded" />
+          animate__pulse animate__infinite rounded"/>
       <p class="animate__animated animate__fadeInDownBig lead h1" style="font-family: VT323"></p>
       <p class="title quote"></p>
       <audio controls>
@@ -43,7 +37,7 @@
 
     <!-- link tree button -->
     <div class="link">
-      <a href="https://instagram.com/akbargyaranto" target="_blank"
+      <a href="https://instagram.com/stillness.flux" target="_blank"
         class="animate__animated animate__bounceInLeft">Instagram
         <svg style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1"
           viewBox="0 0 512 512" width="20" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
@@ -56,8 +50,7 @@
 
 
 
-
-      <a href="https://www.threads.net/@akbargyaranto" target="_blank"
+      <a href="https://www.threads.net/@stillness.flux" target="_blank"
         class="animate__animated animate__bounceInLeft animate__delay-1s">Threads
         <img src="src/img/OIF-removebg-preview.png" width="20" alt="">
       </a>
@@ -74,8 +67,8 @@
         </svg>
       </a>
 
-      <a href="https://gyaranto.vercel.app/" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-3s">Portfolio
+      <a href="https://stillnessfilm.vercel.app/" target="_blank" class="animate__animated
+          animate__bounceInLeft animate__delay-3s">StillFilm
       </a>
 
       <!-- <a href="https://www.douyin.com/user/MS4wLjABAAAAdcNDTERxoghOHAjMNRA4o28dlHWqtr-9UCLLhtrvees" target="_blank"
@@ -99,13 +92,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/TextPlugin.min.js"></script>
 
-<!-- gsap -->
+    <!-- gsap -->
     <script>
-      gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness' })
+      gsap.to('.lead', { duration: 1.5, delay: 1.5, text: 'stillness.flux' })
       gsap.to('.quote', { duration: 5, delay: 2.5, text: '"Jadilah pemaaf dan suruhlah orang mengerjakan yang makruf, serta jangan pedulikan orang-orang yang bodoh." (QS Al-Araf ayat 199).' })
     </script>
 
-      <!-- aos 
+    <!-- aos 
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
           AOS.init();
